@@ -305,8 +305,8 @@ class PetRescuePublisher(AbstractPublisher):
             "intake_origin":            asm3.utils.iif(iscat, origin, ""), # cats only, community_cat | owner_surrender | pound_transfer | shelter_transfer
             "incompatible_with_cats":   an.ISGOODWITHCATS == 1,
             "incompatible_with_dogs":   an.ISGOODWITHDOGS == 1,
-            "incompatible_with_kids_under_5": an.ISGOODWITHCHILDREN == 1 || an.ISGOODWITHCHILDREN >= 5,
-            "incompatible_with_kids_6_to_12": an.ISGOODWITHCHILDREN == 1 || an.ISGOODWITHCHILDREN == 12,
+            "incompatible_with_kids_under_5": an.ISGOODWITHCHILDREN == 1 or an.ISGOODWITHCHILDREN >= 5,
+            "incompatible_with_kids_6_to_12": an.ISGOODWITHCHILDREN == 1 or an.ISGOODWITHCHILDREN == 12,
             "needs_constant_care":      needs_constant_care,
             "adoption_process":         "", # 4,000 chars how to adopt
             "contact_details_source":   "self", # self | user | group
